@@ -1,5 +1,5 @@
 #[Stanford Feeds Helper](https://github.com/SU-SWS/stanford_feeds_helper)
-##### Version: 7.x-1.1
+##### Version: 7.x-1.2
 
 TODO: Currently this module has hard coded values to help the stanford_news_extras_feed_importer module. It needs abstracted for use with other modules.
 
