@@ -1,5 +1,11 @@
 Stanford Feeds Helper
 
+Version                       7.x-1.2 2016-09-15
+------------------------------------------------
+- Added UI for setting field collection throttle
+- Added duplicate node protection option
+- Added codeclimate testing
+
 Version                       7.x-1.1 2016-08-29
 ------------------------------------------------
 - Re-introduced the field_collection throttle
